[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-shared"
version = "0.1.0"
description = "NetSim Astra shared utilities — RF defaults, parameter parsing, geodetic math"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["astra_shared*"]
